# flusk-dev

./: .env.example  .fluskrc.json  .gitignore  .vercelignore  BUILD_STATUS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY-GCP.md  DEPLOYMENT_READY.md  Dockerfile  LICENSE  PHASE1_STATUS.md  PHASE2_STATUS.md  README.md  SECURITY.md  START_HERE.md  TESTING_COMPLETE.md  app.flusk.yaml  cloudrun.yaml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  eslint.config.js  fix-build.sh  fix-build2.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run-recipe.mjs  server-minimal.ts  server.ts  test-e2e.sh  vercel.json  verify-syntax.mjs  vitest.config.ts  watt.json
flusk-py/: README.md  pyproject.toml
flusk-py/src/flusk/: __init__.py
flusk-py/src/flusk/analysis/: __init__.py  cost.py  report.py
flusk-py/src/flusk/cli/: __init__.py  analyze.py  history.py  main.py  purge.py  report.py
flusk-py/src/flusk/commands/: explain.py
flusk-py/src/flusk/entities/: __init__.py  analyze_session.py  base.py  budget_alert.py  conversion.py  explain_session.py  insight.py  llm_call.py  model_performance.py  optimization.py  pattern.py  performance_pattern.py  (+7 more)
flusk-py/tests/: test_analyze_session.py  test_budget_alert.py  test_conversion.py  test_explain_session.py  test_insight.py  test_llm_call.py  test_model_performance.py  test_optimization.py  test_pattern.py  test_performance_pattern.py  test_profile_session.py  test_prompt_template.py  test_prompt_version.py  test_routing_decision.py  test_routing_rule.py  test_span.py  test_trace.py
(+285 files in other folders)
